2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

	* lisp/nnmh.el (nnmh-retrieve-parsed-headers): Abolished.

	* lisp/gnus-sum.el (gnus-get-newsgroup-headers-xover): Don't use
	`gnus-retrieve-parsed-headers'.
	(gnus-fetch-headers): Ditto.

	* lisp/gnus-int.el (gnus-retrieve-parsed-headers): Abolished.

	* lisp/gnus-cache.el (gnus-cache-braid-headers): Abolished.
	(gnus-cache-retrieve-parsed-headers): Abolished.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Bind
	`nnmail-expiry-wait-function' to nil if the group's parameter
	`expiry-wait' is specified by the user or the shimbun's default
	value is provided.

2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-message-make-user-agent): New
	implementation.

2001-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/nntp.el (nntp-request-newgroups): Use UTC date for
	NEWGROUPS command.

	* lisp/gnus-start.el (gnus-find-new-newsgroups): Use
	`message-make-date' instead of `current-time-string'.
	(gnus-ask-server-for-new-groups): Ditto.
	(gnus-check-first-time-used): Ditto.

2001-07-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-yank-original): Unwind-protect while
	suspending font-lock.
	(message-mode): Modify for the following changes.
	(message-font-lock-keywords-2): Abolished.
	(message-font-lock-keywords-1): Abolished.
	(message-font-lock-keywords): Unified.
	(message-font-lock-cited-text-matcher): Abolished.
	(font-lock-after-change-function): Don't advise it.
	(message-font-lock-last-position): Abolished.
	(message-font-lock-citation-name-max-column): Abolished.
	(message-font-lock-cited-text-regexp) Abolished.
	(message-font-lock-fence-close-position): Abolished.
	(message-font-lock-fence-open-position): Abolished.
	(message-font-lock-fence-close-regexp): Abolished.